css alignment fixes

--- a/webroot/sites/all/themes/dotgov/css/dotgov.css
+++ b/webroot/sites/all/themes/dotgov/css/dotgov.css
@@ -1925,11 +1925,11 @@ table.dnssec-table td, table.dnssec-table th {
 		max-height: 375px;
 	}
 	.web-info-acc-issues #access_chart {
-		margin-top: 47px;
+		margin-top: 57px;
 	}
 
 	.web-info-acc-issues .report-buttons {
-    	margin-top: 4px !important;
+    	margin-top: 0 !important;
 	}
 	.wi-https-info #https_chart {
 		margin-top: 44px;
